typescript/checker/tests/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression5.ts.stderr
error: UndefinedSymbol {
    sym: Atom('bar' type=inline),
    span: Span {
        lo: BytePos(
            1,
        ),
        hi: BytePos(
            4,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression5.ts:1:2
  |
1 | (bar(x,
  |  ^^^

error: UndefinedSymbol {
    sym: Atom('x' type=inline),
    span: Span {
        lo: BytePos(
            5,
        ),
        hi: BytePos(
            6,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression5.ts:1:6
  |
1 | (bar(x,
  |      ^

